<resources>
    <string name="app_name">WorldCinemaTest</string>
    <string name="e_mail">E-Mail</string>
    <string name="pass">Пароль</string>
    <string name="signin">Войти</string>
    <string name="reg">Регистрация</string>
    <string name="watch">Глядеть и смотреть</string>
    <string name="tv_watch">В тренде</string>
    <string name="news">Новое</string>
    <string name="for_you">Для вас</string>
    <string name="st">Первый</string>
    <string name="sd">Второй</string>
    <string name="sdd">Третий</string>
</resources>